--- a/index.html
+++ b/index.html
@@ -67,6 +67,37 @@
         </p>
       </div>
     </section>
+    <section class="offer">
+      <h2 class="visually-hidden">
+        Наши предложения
+      </h2>
+      <div class="container">
+        <div class="offer__title">
+          <p class="offer__title__text">Устали от серости мегаполиса?</p>
+          <br>
+          <p class="offer__title__text">Нам есть, что вам <br> предложить!</p>
+        </div>
+        <ul class="offer__list">
+          <li class="offer__item">
+            <h3 class="offer__subtitle">Поднимает настроение</h3>
+            <p class="offer__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько
+              кликов!</p>
+          </li>
+          <li class="offer__item">
+            <h3 class="offer__subtitle">Меняет мир вокруг</h3>
+            <p class="offer__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект
+            </p>
+          </li>
+          <li class="offer__item">
+            <h3 class="offer__subtitle">Заводит новых друзей</h3>
+            <p class="offer__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+            <picture>
+              <img class="offer__phone--3" src="./img/iphone-screen-mobile@1x.png" alt="">
+            </picture>
+          </li>
+        </ul>
+      </div>
+    </section>
 
   </main>
   <footer>
