--- a/index.html
+++ b/index.html
@@ -82,23 +82,46 @@
             <h3 class="offer__subtitle">Поднимает настроение</h3>
             <p class="offer__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько
               кликов!</p>
+            <picture>
+              <source media="(min-width: 1200px)" srcset="./img/iphone-screen-1-desktop@1x.png">
+              <img class="offer__phone offer__phone--1" src="" alt="">
+            </picture>
           </li>
           <li class="offer__item">
             <h3 class="offer__subtitle">Меняет мир вокруг</h3>
             <p class="offer__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект
             </p>
+            <picture>
+              <source media="(min-width: 1200px)" srcset="./img/iphone-screen-2-desktop@1x.png">
+              <img class="offer__phone offer__phone--2" src="" alt="">
+            </picture>
           </li>
           <li class="offer__item">
             <h3 class="offer__subtitle">Заводит новых друзей</h3>
             <p class="offer__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
             <picture>
-              <img class="offer__phone--3" src="./img/iphone-screen-mobile@1x.png" alt="">
+              <source media="(min-width: 1200px)" srcset="./img/iphone-screen-3-desktop@1x.png">
+              <source media="(min-width: 660px)" srcset="./img/iphone-screen-3-tablet@1x.png">
+              <img class="offer__phone offer__phone--3" src="./img/iphone-screen-mobile@1x.png" alt="">
             </picture>
           </li>
         </ul>
       </div>
     </section>
-
+    <section class="effect">
+      <div class="container">
+        <div class="effect__clock">
+          <img src="https://via.placeholder.com/238x276" alt="" srcset="">
+        </div>
+        <div class="effect__info">
+          <h3 class="effect__title">Эффект <br>на 24 часа!</h3>
+          <div class="effect__text"> Британские ученые провели исследования и доказали,<br class="br--desktop"> что
+            положительный эффект <br>от
+            использования приложения<br class="br--desktop"> длится целые сутки!</div>
+          <a class="effect__link" href="#">Узнать больше об исследовании</a>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
