--- a/index.html
+++ b/index.html
@@ -110,9 +110,6 @@
     </section>
     <section class="effect">
       <div class="container">
-        <div class="effect__clock">
-          <img src="https://via.placeholder.com/238x276" alt="" srcset="">
-        </div>
         <div class="effect__info">
           <h3 class="effect__title">Эффект <br>на 24 часа!</h3>
           <div class="effect__text"> Британские ученые провели исследования и доказали,<br class="br--desktop"> что
@@ -121,6 +118,160 @@
           <a class="effect__link" href="#">Узнать больше об исследовании</a>
         </div>
       </div>
+    </section>
+    <section class="review">
+      <div class="container">
+        <button class="review__button review__button--back" type="button">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719"
+            xml:space="preserve">
+            <path
+              d="M2.045,20.859L21.458,1.446c0.331-0.331,0.331-0.867,0-1.198c-0.33-0.331-0.867-0.331-1.197,0L0.248,20.261 c-0.331,0.33-0.331,0.867,0,1.197l20.013,20.013c0.164,0.165,0.382,0.248,0.599,0.248s0.434-0.083,0.599-0.248 c0.331-0.331,0.331-0.867,0-1.198L2.045,20.859z" />
+          </svg>
+
+        </button>
+        <div class="review__item">
+          <div class="review__author">
+            <h3 class="review__title">
+              Николай Петров
+            </h3>
+            <span class="review__age">
+              25 лет, водитель трамвая
+            </span>
+          </div>
+          <p class="review__text">
+            «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я
+            познакомился со своей будущей женой в комментариях к выложенной фотографии!»
+          </p>
+        </div>
+        <button class="review__button review__button--forward" type="button">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719"
+            xml:space="preserve">
+            <path
+              d="M19.661,20.859L0.248,1.446c-0.331-0.331-0.331-0.867,0-1.198c0.33-0.331,0.867-0.331,1.197,0l20.013,20.012 c0.33,0.33,0.33,0.867,0,1.197L1.445,41.471c-0.164,0.165-0.382,0.248-0.599,0.248s-0.434-0.083-0.599-0.248 c-0.331-0.331-0.331-0.867,0-1.198L19.661,20.859z" />
+          </svg>
+
+        </button>
+        <ul class="review__slider-list">
+          <li>
+            <button class="review__dots review__dots--active" type="button"></button>
+          </li>
+          <li>
+            <button class="review__dots" type="button"></button>
+          </li>
+          <li>
+            <button class="review__dots" type="button"></button>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="sub">
+      <h2 class="visually-hidden">Цены на наши услуги</h2>
+      <table>
+        <tr>
+          <th></th>
+          <th class="sub__cell--price">
+            <span class="sub__name">База</span>
+            <span class="sub__price">1,99 USD</span>
+          </th>
+          <th class="sub__cell--price">
+            <span class="sub__name">Стандарт</span>
+            <span class="sub__price">3,99 USD</span>
+          </th>
+          <th class="sub__cell--price">
+            <span class="sub__name">Анлим</span>
+            <span class="sub__price">9,99 USD</span>
+          </th>
+        </tr>
+        <tr>
+          <th class="sub__cell sub__cell--name">
+            <span>Розовый фильтр</span>
+          </th>
+          <th class="sub__cell">
+            <svg class="icon-yes" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+              y="0px" width="31px" height="21px" viewBox="-82.357 4.875 21.698 16.09"
+              enable-background="new -82.357 4.875 21.698 16.09" xml:space="preserve">
+              <path
+                d="M-60.953,5.167c-0.391-0.391-1.023-0.391-1.414,0L-75.75,18.551l-4.9-4.9c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414l5.607,5.607c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l14.09-14.0 C-60.562,6.191-60.562,5.558-60.953,5.167z" />
+            </svg>
+          </th>
+          <th class="sub__cell">
+            <svg class="icon-yes" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+              y="0px" width="31px" height="21px" viewBox="-82.357 4.875 21.698 16.09"
+              enable-background="new -82.357 4.875 21.698 16.09" xml:space="preserve">
+              <path
+                d="M-60.953,5.167c-0.391-0.391-1.023-0.391-1.414,0L-75.75,18.551l-4.9-4.9c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414l5.607,5.607c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l14.09-14.0 C-60.562,6.191-60.562,5.558-60.953,5.167z" />
+            </svg>
+          </th>
+          <th class="sub__cell">
+            <svg class="icon-yes" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+              y="0px" width="31px" height="21px" viewBox="-82.357 4.875 21.698 16.09"
+              enable-background="new -82.357 4.875 21.698 16.09" xml:space="preserve">
+              <path
+                d="M-60.953,5.167c-0.391-0.391-1.023-0.391-1.414,0L-75.75,18.551l-4.9-4.9c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414l5.607,5.607c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l14.09-14.0 C-60.562,6.191-60.562,5.558-60.953,5.167z" />
+            </svg>
+          </th>
+        </tr>
+        <tr>
+          <th class="sub__cell sub__cell--name">
+            <span>Смайлики</span>
+          </th>
+          <th class="sub__cell">
+            <svg class="icon-no" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+              y="0px" width="27px" height="27px" viewBox="0 0 26.752 26.752" enable-background="new 0 0 26.752 26.752"
+              xml:space="preserve">
+              <path
+                d="M15.497,13.376L26.312,2.562c0.586-0.585,0.586-1.535,0-2.121s-1.535-0.586-2.121,0L13.376,11.255L2.562,0.439 c-0.586-0.586-1.535-0.586-2.121,0c-0.586,0.585-0.586,1.535,0,2.121l10.814,10.815L0.439,24.19c-0.586,0.586-0.586,1.535,0,2.121 c0.293,0.293,0.677,0.439,1.061,0.439s0.768-0.146,1.061-0.439l10.815-10.814L24.19,26.312c0.293,0.293,0.677,0.439,1.061,0.439 s0.768-0.146,1.061-0.439c0.586-0.586,0.586-1.535,0-2.121L15.497,13.376z" />
+            </svg>
+          </th>
+          <th class="sub__cell">
+            <svg class="icon-yes" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+              y="0px" width="31px" height="21px" viewBox="-82.357 4.875 21.698 16.09"
+              enable-background="new -82.357 4.875 21.698 16.09" xml:space="preserve">
+              <path
+                d="M-60.953,5.167c-0.391-0.391-1.023-0.391-1.414,0L-75.75,18.551l-4.9-4.9c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414l5.607,5.607c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l14.09-14.0 C-60.562,6.191-60.562,5.558-60.953,5.167z" />
+            </svg>
+          </th>
+          <th class="sub__cell">
+            <svg class="icon-yes" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+              y="0px" width="31px" height="21px" viewBox="-82.357 4.875 21.698 16.09"
+              enable-background="new -82.357 4.875 21.698 16.09" xml:space="preserve">
+              <path
+                d="M-60.953,5.167c-0.391-0.391-1.023-0.391-1.414,0L-75.75,18.551l-4.9-4.9c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414l5.607,5.607c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l14.09-14.0 C-60.562,6.191-60.562,5.558-60.953,5.167z" />
+            </svg>
+          </th>
+        </tr>
+        <tr>
+          <th class="sub__cell sub__cell--name">
+            <span>Комментарии</span>
+          </th>
+          <th class="sub__cell">
+            <svg class="icon-no" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+              y="0px" width="27px" height="27px" viewBox="0 0 26.752 26.752" enable-background="new 0 0 26.752 26.752"
+              xml:space="preserve">
+              <path
+                d="M15.497,13.376L26.312,2.562c0.586-0.585,0.586-1.535,0-2.121s-1.535-0.586-2.121,0L13.376,11.255L2.562,0.439 c-0.586-0.586-1.535-0.586-2.121,0c-0.586,0.585-0.586,1.535,0,2.121l10.814,10.815L0.439,24.19c-0.586,0.586-0.586,1.535,0,2.121 c0.293,0.293,0.677,0.439,1.061,0.439s0.768-0.146,1.061-0.439l10.815-10.814L24.19,26.312c0.293,0.293,0.677,0.439,1.061,0.439 s0.768-0.146,1.061-0.439c0.586-0.586,0.586-1.535,0-2.121L15.497,13.376z" />
+            </svg>
+          </th>
+          <th class="sub__cell">
+            <svg class="icon-no" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+              y="0px" width="27px" height="27px" viewBox="0 0 26.752 26.752" enable-background="new 0 0 26.752 26.752"
+              xml:space="preserve">
+              <path
+                d="M15.497,13.376L26.312,2.562c0.586-0.585,0.586-1.535,0-2.121s-1.535-0.586-2.121,0L13.376,11.255L2.562,0.439 c-0.586-0.586-1.535-0.586-2.121,0c-0.586,0.585-0.586,1.535,0,2.121l10.814,10.815L0.439,24.19c-0.586,0.586-0.586,1.535,0,2.121 c0.293,0.293,0.677,0.439,1.061,0.439s0.768-0.146,1.061-0.439l10.815-10.814L24.19,26.312c0.293,0.293,0.677,0.439,1.061,0.439 s0.768-0.146,1.061-0.439c0.586-0.586,0.586-1.535,0-2.121L15.497,13.376z" />
+            </svg>
+          </th>
+          <th class="sub__cell">
+            <svg class="icon-yes" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+              y="0px" width="31px" height="21px" viewBox="-82.357 4.875 21.698 16.09"
+              enable-background="new -82.357 4.875 21.698 16.09" xml:space="preserve">
+              <path
+                d="M-60.953,5.167c-0.391-0.391-1.023-0.391-1.414,0L-75.75,18.551l-4.9-4.9c-0.391-0.391-1.023-0.391-1.414,0 s-0.391,1.023,0,1.414l5.607,5.607c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293l14.09-14.0 C-60.562,6.191-60.562,5.558-60.953,5.167z" />
+            </svg>
+          </th>
+        </tr>
+      </table>
     </section>
   </main>
   <footer>
